--- a/gradle.properties
+++ b/gradle.properties
@@ -3,7 +3,7 @@
 gtnh.settings.blowdryerTag = 0.2.2
 
 # Human-readable mod name, available for mcmod.info population.
-modName = MyMod
+modName = ArmorFix
 
 # Case-sensitive identifier string, available for mcmod.info population and used for automatic mixin JSON generation.
 # Conventionally lowercase.
@@ -33,18 +33,18 @@ channel = stable
 mappingsVersion = 12
 
 # Defines other MCP mappings for dependency deobfuscation.
-remoteMappings = https\://raw.githubusercontent.com/MinecraftForge/FML/1.7.10/conf/
+remoteMappings = https://raw.githubusercontent.com/MinecraftForge/FML/1.7.10/conf/
 
 # Select a default username for testing your mod. You can always override this per-run by running
 # `./gradlew runClient --username=AnotherPlayer`, or configuring this command in your IDE.
-developmentEnvironmentUserName = Developer
+developmentEnvironmentUserName = _Marnex_
 
 # Enables modern Java syntax support. Valid values:
 # - false: No modern syntax, Java 8 only
 # - jabel: Jabel syntax-only support, compiles to J8 bytecode
 # - jvmDowngrader: Full modern Java via JVM Downgrader (syntax + stdlib APIs)
 # - modern: Native modern Java bytecode, no downgrading
-enableModernJavaSyntax = jabel
+enableModernJavaSyntax = false
 
 # If set, ignores the above setting and compiles with the given toolchain. This may cause unexpected issues,
 # and should *not* be used in most situations. -1 disables this.
@@ -74,7 +74,7 @@ enableGenericInjection = true
 # Generate a class with a String field for the mod version named as defined below.
 # If generateGradleTokenClass is empty or not missing, no such class will be generated.
 # If gradleTokenVersion is empty or missing, the field will not be present in the class.
-generateGradleTokenClass = com.marnex.armorfix.Tags
+generateGradleTokenClass =
 
 # Name of the token containing the project's current version to generate/replace.
 gradleTokenVersion = VERSION
@@ -106,7 +106,7 @@ usesMixins = true
 separateMixinSourceSet =
 
 # Adds some debug arguments like verbose output and class export.
-usesMixinDebug = false
+usesMixinDebug = true
 
 # Specify the location of your implementation of IMixinConfigPlugin. Leave it empty otherwise.
 mixinPlugin =
@@ -123,7 +123,7 @@ coreModClass =
 
 # If your project is only a consolidation of mixins or a core mod and does NOT contain a 'normal' mod ( = some class
 # that is annotated with @Mod) you want this to be true. When in doubt: leave it on false!
-containsMixinsAndOrCoreModOnly = true
+containsMixinsAndOrCoreModOnly = false
 
 # Enables Mixins even if this mod doesn't use them, useful if one of the dependencies uses mixins.
 forceEnableMixins = false
