--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,9 @@
 # ExampleMod tag to use as Blowdryer (Spotless, etc.) settings version, leave empty to disable.
 # LOCAL to test local config updates.
 gtnh.settings.blowdryerTag = 0.2.2
+gtnh.modules.gitVersion=false
+
+modVersion = 1.0
 
 # Human-readable mod name, available for mcmod.info population.
 modName = ArmorFix
